--- a/modules/oauth_github/public/lib/commands/get_user_info.liquid
+++ b/modules/oauth_github/public/lib/commands/get_user_info.liquid
@@ -6,9 +6,8 @@ hash_assign get_token_request["client_secret"] = provider.secret_value
 hash_assign get_token_request["code"] = context.params.code
 
 # get access token
-function token_body = "modules/user/queries/api_call", api_template: "modules/oauth_github/oauth/get_token", data: get_token_request
-assign token_body = token_body | dig: "response", "body" | parse_json
-assign access_token = token_body.access_token
+function access_token = "modules/oauth_github/queries/get_token", data: get_token_request
+assign access_token = access_token.access_token
 
 assign result = "{}" | parse_json
 hash_assign result["valid"] = false
@@ -21,12 +20,10 @@ endif
 assign request_data = "{}" | parse_json
 hash_assign request_data["access_token"] = access_token
 
-function user_info = "modules/user/queries/api_call", api_template: "modules/oauth_github/oauth/user_info", data: request_data
-assign user_info = user_info | dig: "response", "body" | parse_json
-
+function user_info = "modules/oauth_github/queries/get_user_info", data: request_data
+log user_info, type: "D"
 if user_info.email == null
-    function user_emails = "modules/user/queries/api_call", api_template: "modules/oauth_github/oauth/user_email", data: request_data
-    assign user_emails = user_emails | dig: "response", "body" | parse_json
+    function user_emails = "modules/oauth_github/queries/get_user_email", data: request_data
     for email in user_emails
         if email.primary == true
             hash_assign user_info["email"] = email.email
