--- a/modules/user/public/views/pages/oauth/index.liquid
+++ b/modules/user/public/views/pages/oauth/index.liquid
@@ -1,4 +1,5 @@
 {% liquid
+    # platformos-check-disable ConvertIncludeToRender
     function current_user = 'modules/user/queries/user/current'
     include 'modules/user/helpers/can_do_or_unauthorized', requester: current_user, do: 'oauth.manage', redirect_anonymous_to_login: true
     render 'modules/user/oauth/index'
