--- a/modules/user/public/views/partials/oauth/index.liquid
+++ b/modules/user/public/views/partials/oauth/index.liquid
@@ -18,9 +18,13 @@ OAuth management. <a href="/">Back</a><br/>
       </button>
     </form>
   {% else %}
-  {% log provider, type: 'DEBUG' %}
-  {% assign url = "/oauth/" | append: provider[0] | append: '/start' %}
-    <a href="{{ url }}">{{ provider[1].name }}</a><br />
+    <form action="/oauth/{{ provider[0] }}/start" method="post">
+      <input type="hidden" name="authenticity_token" value="{{ context.authenticity_token }}">
+      <input type="hidden" name="_method" value="post" />
+      <button type="submit">
+        {{ provider[1].name }}
+      </button>
+    </form>
   {% endif %}
 {% endfor %}
 
