--- a/app/views/pages/index.liquid
+++ b/app/views/pages/index.liquid
@@ -22,7 +22,7 @@
       </button>
     </form>
   {% endif %}
-  <a href="/subscription">Subscrioption area</a><br/>
+  <a href="/subscription">Subscription area</a><br/>
   <a href="/admin">Admin</a><br/>
   <a href="/oauth">OAuth settings</a><br/>
 {% else %}
