--- a/app/views/pages/index.liquid
+++ b/app/views/pages/index.liquid
@@ -40,7 +40,7 @@
         <ul class="app-user-intro-nav">
           <li><a href="/users/new">Register</a></li>
           <li><a href="/sessions/new">Log in</a></li>
-          <li><a href="/passwords/reset">Reset password</a></li>
+          {% comment %} <li><a href="/passwords/reset">Reset password</a></li> {% endcomment %}
         </ul>
       </nav>
     </section>
