--- a/modules/oauth_google/public/lib/queries/get_token.liquid
+++ b/modules/oauth_google/public/lib/queries/get_token.liquid
@@ -4,12 +4,14 @@
   hash_assign query["code"] = data.code
   hash_assign query["client_id"] = data.client_id
   hash_assign query["client_secret"] = data.client_secret
+  assign location = "https://" | append: context.location.host | append: '/oauth/google/callback'
+  hash_assign query["redirect_uri"] = location
   assign query = query | querify
 
   assign headers = "{}" | parse_json
   hash_assign headers["Accept"] = "application/json"
 
-  graphql r  = "modules/oauth_github/get_token", body: query, headers: headers
+  graphql r  = "modules/oauth_google/get_token", body: query, headers: headers
   assign result = r.api_call_send.response.body | parse_json
   return result
 %}
