Sesson clear after log|_out

--- a/modules/user/public/lib/commands/session/destroy.liquid
+++ b/modules/user/public/lib/commands/session/destroy.liquid
@@ -12,6 +12,8 @@
     hash_assign destroy['hook_results'] = results
     assign event_payload = null | hash_merge: user_id: user.id
     function _ = 'modules/core/commands/events/publish', type: 'user_logout', object: event_payload, delay: null, max_attempts: null
+    session original_user_id = null
+    session return_to = null
   endunless
 
   return destroy
