--- a/modules/user/public/views/partials/passwords/reset.liquid
+++ b/modules/user/public/views/partials/passwords/reset.liquid
@@ -32,4 +32,6 @@ metadata:
 
   </form>
 
+  <span class="pos-supplementary">You've remembered the password? <a href="/users/new">Sign in</a></span>
+
 </section>
