--- a/modules/user/public/views/partials/users/new.liquid
+++ b/modules/user/public/views/partials/users/new.liquid
@@ -42,6 +42,6 @@ metadata:
 
   </form>
 
-  {{ 'modules/user/users.new.already_have_account' | t }}
+  <span class="pos-supplementary">{{ 'modules/user/users.new.already_have_account' | t }}</span>
 
 </section>
