--- a/app/views/layouts/application.liquid
+++ b/app/views/layouts/application.liquid
@@ -18,23 +18,28 @@
 
       <meta name="viewport" content="width=device-width,initial-scale=1,user-scalable=yes">
 
+      <script>
+        /* namespace */
+        if(typeof window.pos !== 'object'){
+          window.pos = {};
+          window.pos.modules = {};
+          window.pos.translations = {};
+        }
+      </script>
+
   </head>
   <body>
+
+    {{ content_for_layout }}
 
     {% liquid
       function flash = 'modules/core/commands/session/get', key: 'sflash', clear: null
       if context.location.pathname != flash.from or flash.force_clear
         function _ = 'modules/core/commands/session/clear', key: 'sflash'
       endif
+
+      render 'modules/common-styling/toasts', params: flash
     %}
-    {% if flash %}
-      flash: {{ flash.message }}
-      <hr/>
-    {% endif %}
-
-
-
-    {{ content_for_layout }}
 
   </body>
 </html>
