--- a/app/views/layouts/application.liquid
+++ b/app/views/layouts/application.liquid
@@ -12,6 +12,7 @@
       <link rel="stylesheet" href="{{ 'modules/common-styling/style/pos-avatar.css' | asset_url }}">
       <link rel="stylesheet" href="{{ 'modules/common-styling/style/pos-forms.css' | asset_url }}">
       <link rel="stylesheet" href="{{ 'modules/common-styling/style/pos-page.css' | asset_url }}">
+      <link rel="stylesheet" href="{{ 'modules/common-styling/style/pos-card.css' | asset_url }}">
       <link rel="stylesheet" href="{{ 'modules/user/style/pos-user-form.css' | asset_url }}">
       {% comment %} custom styles specific for this app, some overwrite the defaults {% endcomment %}
       <link rel="stylesheet" href="{{ 'style/app.css' | asset_url }}">
