--- a/modules/user/public/views/pages/oauth/callback.liquid
+++ b/modules/user/public/views/pages/oauth/callback.liquid
@@ -32,7 +32,7 @@ slug: oauth/:provider/callback
   endif
 
   # fetch user info using the appropriate module
-  assign command_path = "modules/oauth_" | append: selected_provider.key | append: "/commands/get_user_info"
+  assign command_path = "modules/oauth_" | append: selected_provider.key | append: "/helpers/get_user_info"
   function user_info = command_path, provider: selected_provider, code: context.params.code
 
   if user_info.valid == false
