--- a/modules/oauth_github/public/lib/commands/get_user_info.liquid
+++ b/modules/oauth_github/public/lib/commands/get_user_info.liquid
@@ -1,11 +1,10 @@
 {% liquid
-  assign headers = "{}" | parse_json
-  hash_assign headers["Accept"] = "application/json"
   assign bearer = "Bearer " | append: data.access_token
-  hash_assign headers["Authorization"] = bearer
+  function object = 'modules/oauth_github/commands/get_user_info/build', object: bearer
+  function object = 'modules/oauth_github/commands/get_user_info/check', object: object
 
   graphql r  = 'modules/oauth_github/get_user_info', headers: headers
   assign result = r.api_call_send.response.body | parse_json
   return result
-  %}
+%}
   
