--- a/modules/user/public/views/pages/oauth/unassign.liquid
+++ b/modules/user/public/views/pages/oauth/unassign.liquid
@@ -16,6 +16,6 @@ method: delete
     graphql g = 'modules/user/oauth/delete', id: g.records.results[0].id
   endif
 
-  function _ = 'modules/user/helpers/flash', notice: 'modules/user/oauth.unassigned_provider'
+  function _ = 'modules/user/helpers/flash', notice: 'modules/user/oauth.app.unassigned_provider'
   redirect_to '/'
 %}
