--- a/app/views/pages/index.liquid
+++ b/app/views/pages/index.liquid
@@ -8,17 +8,36 @@
     <main class="app-user-page">
 
       <section class="app-user-info pos-card pos-card-highlighted">
-        <div>
+        <header>
           <h1 class="pos-heading-3">Current user</h1>
-          {{ current_user }}
-        </div>
-        <form action="/sessions" method="post">
-          <input type="hidden" name="authenticity_token" value="{{ context.authenticity_token }}">
-          <input type="hidden" name="_method" value="delete">
-          <button type="submit" class="pos-button">
-            {{ 'modules/user/users.logout' | t }}
-          </button>
-        </form>
+          <form action="/sessions" method="post">
+            <input type="hidden" name="authenticity_token" value="{{ context.authenticity_token }}">
+            <input type="hidden" name="_method" value="delete">
+            <button type="submit" class="pos-button">
+              {{ 'modules/user/users.logout' | t }}
+            </button>
+          </form>
+        </header>
+        <dl class="app-user-info-list">
+          <dt>id</dt>
+          <dd>{{ current_user.id }} </dd>
+          {% for info in current_user %}
+            {% if info[0] != 'id' %}
+              <dt>{{ info[0] }}</dt>
+              <dd>
+                {% if info[0] == 'roles' %}
+                  <ul class="pos-tags-list">
+                    {% for role in info[1] %}
+                      <li class="pos-tag">{{ role }}</li>
+                    {% endfor %}
+                  </ul>
+                {% else %}
+                  {{ info[1] }}
+                {% endif %}
+              </dd>
+            {% endif %}
+          {% endfor %}
+        </dl>
       </section>
 
 
@@ -33,6 +52,7 @@
         </button>
       </form>
     {% endif %}
+
     <a href="/subscription">Subscrioption area</a><br/>
     <a href="/admin">Admin</a><br/>
 
