--- a/app/views/pages/index.liquid
+++ b/app/views/pages/index.liquid
@@ -31,6 +31,7 @@
                       <li class="pos-tag">{{ role }}</li>
                     {% endfor %}
                   </ul>
+                  <a href="https://github.com/Platform-OS/pos-module-user?tab=readme-ov-file#setup">How to promote user to superadmin?</a>
                 {% else %}
                   {{ info[1] }}
                 {% endif %}
